fixed date and kex link

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -76,7 +76,7 @@
                 501 SE 14th Ave</a>
               </li>
               <li class="location__list_item">
-                <img src="images/kexhostel_photo2.jpg"><a href="https://www.kexhostel.is/" class="location__list_link" alt="KEX Hostel in Portland Oregon">Kex Hostel<br>
+                <img src="images/kexhostel_photo2.jpg"><a href="https://kexhotels.com/" class="location__list_link" alt="KEX Hostel in Portland Oregon">Kex Hotels<br>
                 100 NE Martin Luther King Jr Blvd</a>
               </li>
               <li class="location__list_item">
@@ -103,7 +103,7 @@
                 </p>
               </div>
             </div>-->
-            <h3 class="hackathon__section_title">Images From 2019 Winter Lights Festival</h3>
+            <h3 class="hackathon__section_title">Images From 2018 Winter Lights Festival</h3>
             <img src="images/past-projects/Mallory2.jpg" alt="Mallory">
             <img src="images/event-image.jpg" alt="Event Image">
             <img src="images/past-projects/allison_1.jpg" alt="Allison">
