changed to source sans pro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu:500,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Ubuntu:500,700&display=swap" rel="stylesheet">
 	<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
 	<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -67,7 +67,7 @@
 		<section class="wlf-link">
 			<div>
 				<h2>Constellations</h2>
-				<h3>CETI WINTER LIGHTS FESTIVAL 2020</h3>
+				<h3>Ceti Art+Tech Experiments at the 2020 Portland Winter Light Festival</h3>
 				<a href="wlf2020/index.html"><img src=""></a>
 				<p>Join us on January 17 and 18th group of artists, technologists, and hackers for a weekend of collaborative creative experiments.</p>
 				<a href="wlf2020/index.html" class="button">Info and Registration</a>
