--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR.">
   <title>CETI Winter Lights Festival 2020 | Portland, OR</title>
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
       <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
       <hgroup class="hackathon__header_group">
         <h2 class="hackathon__subtitle">CONSTELLATIONS</h2>
-        <h1 class="hackathon__title">CETI Winter Lights Festival 2020</h1>
+        <h1 class="hackathon__title">CETI Collaborative Art+Tech Experiments</h1>
       </hgroup>
     </header>
     <nav class="hackathon__main_nav">
@@ -76,7 +76,7 @@
                 501 SE 14th Ave</a>
               </li>
               <li class="location__list_item">
-                <img src="images/kexhostel_photo2.jpg"><a href="https://kexhotels.com/" class="location__list_link" alt="KEX Hostel in Portland Oregon">Kex Hotels<br>
+                <img src="images/kexhotel_photo2.jpg"><a href="https://kexhotels.com/" class="location__list_link" alt="KEX Hotel in Portland Oregon">Kex Hotels<br>
                 100 NE Martin Luther King Jr Blvd</a>
               </li>
               <li class="location__list_item">
@@ -118,7 +118,7 @@
           <ul class="hackathon__partners_list">
             <li class="hackathon__partner_item">
               <a href="https://kexhotels.com/" class="hackathon__partner_link" target="_blank">
-                <img src="images/partners/kex.png" alt="Partner Logo" class="hackathon__partner_image">
+                <img src="images/partners/kex.png" alt="Kex Hotels" class="hackathon__partner_image">
               </a>
             </li>
             <li class="hackathon__partner_item">
