--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -128,7 +128,7 @@
             </li>
             <li class="hackathon__partner_item">
               <a href="https://www.1111supply.com/" class="hackathon__partner_link" target="blank">
-                <img src="images/partners/1111logo_380x.png" alt="Partner Logo" class="hackathon__partner_image">
+                <img src="images/partners/1111-ig-logo.jpg" alt="Partner Logo" class="hackathon__partner_image">
               </a>
             </li>
             <li class="hackathon__partner_item">
