added stacks and source code pro

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR.">
   <title>CETI Winter Lights Festival 2020 | Portland, OR</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,|Source+Code+Pro:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -147,10 +147,18 @@
                 <img src="images/partners/uprightbrewing.png" alt="Upright Brewing" class="hackathon__partner_image">
               </a>
             </li>
+            <li class="hackathon__partner_item stacks">
+              <a href="https://www.thestackscoffeehouse.com/" class="hackathon__partner_link" target="_blank">
+                <img src="images/partners/thestacks.png" alt="The Stacks Coffeehouse" class="hackathon__partner_image">
+              </a>
+            </li>
             <li class="hackathon__partner_item">
               <a href="http://www.psu.gd/" class="hackathon__partner_link"  target="_blank">
-                <img src="images/partners/psugd.svg" alt="Upright Brewing" style="height:100px;" class="hackathon__partner_image">
+                <img src="images/partners/psugd.svg" alt="PSU Graphic Design" style="height:100px;" class="hackathon__partner_image">
               </a>
+            </li>
+            <li class="hackathon__partner_item last">
+   
             </li>
           </ul>
         </div>
