--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -157,8 +157,10 @@
                 <img src="images/partners/psugd.svg" alt="PSU Graphic Design" style="height:100px;" class="hackathon__partner_image">
               </a>
             </li>
-            <li class="hackathon__partner_item last">
-   
+            <li class="hackathon__partner_item">
+              <a href="https://www.flickerbox.com/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/flickerbox_mark_logotype01.png" alt="Flickerbox. Inc." class="hackathon__partner_image">
+              </a>
             </li>
           </ul>
         </div>
