logos for w+k, invis thread, crema, others

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -162,7 +162,25 @@
                 <img src="images/partners/flickerbox_mark_logotype01.png" alt="Flickerbox. Inc." class="hackathon__partner_image">
               </a>
             </li>
+            <li class="hackathon__partner_item">
+              <a href="https://invisiblethread.co/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/invisible-thread.gif" alt="Invisible Thread" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
+              <a href="https://www.cremabakery.com/home" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/crema.gif" alt="Crema Bakery" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
+              <a href="https://www.wk.com/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/wieden.gif" alt="Wieden+Kennedy" class="hackathon__partner_image">
+              </a>
+            </li>
           </ul>
+        </div>
+        <div class="hackathon__partners_additional">
+          Equipment, technology and materials are provided in part by: Intel, Metro East Community Media, Open Signal, and many of the participants and members of the CETI community
         </div>
       </section>
       <section id="Participants" class="hackathon__section hackathon__section--participants">
