--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -231,13 +231,13 @@
         <div class="hackathon__legal_nav_container">
           <ul class="hackathon__legal_list">
             <li class="hackathon__legal_item">
-              <a href="" class="hackathon__legal_link">Privacy Policy</a>
+              <a href="https://docs.google.com/document/d/1Xd5N2kYWqgjsM0du-L2Lu-ltv7sK908xWSmkx8oLfrE/" class="hackathon__legal_link">FAQ</a>
             </li>
             <li class="hackathon__legal_item">
-              <a href="" class="hackathon__legal_link">Code of Conduct</a>
+              <a href="https://docs.google.com/document/d/1JtNCIvxhhIJV5qav-BQsP0WRljAPQRi8vtfIENG9Bm8/" class="hackathon__legal_link" target="_blank">Code of Conduct</a>
             </li>
             <li class="hackathon__legal_item">
-              <a href="" class="hackathon__legal_link">Copyright 2020 CETI</a>
+              Copyright 2020 CETI<
             </li>
           </ul>
         </div>
