added free geek and the wiz

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -180,7 +180,7 @@
           </ul>
         </div>
         <div class="hackathon__partners_additional">
-          Equipment, technology and materials are provided in part by: Intel, Metro East Community Media, Open Signal, and many of the participants and members of the CETI community
+          Equipment, technology and materials are provided in part by: Intel, Metro East Community Media, Open Signal, The Wiz, Free Geek and many of the participants and members of the CETI community
         </div>
       </section>
       <section id="Participants" class="hackathon__section hackathon__section--participants">
