--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -158,6 +158,11 @@
               </a>
             </li>
             <li class="hackathon__partner_item">
+              <a href="https://www.spielmanbagels.com/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/spielmans.jpg" alt="Spielman Bagels" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
               <a href="https://www.flickerbox.com/" class="hackathon__partner_link"  target="_blank">
                 <img src="images/partners/flickerbox_mark_logotype01.png" alt="Flickerbox. Inc." class="hackathon__partner_image">
               </a>
@@ -180,7 +185,7 @@
           </ul>
         </div>
         <div class="hackathon__partners_additional">
-          Equipment, technology and materials are provided in part by: Intel, Metro East Community Media, Open Signal, The Wiz, Free Geek and many of the participants and members of the CETI community
+          Equipment, technology and materials are provided in part by: <a href="https://www.intel.com/content/www/us/en/corporate-responsibility/intel-in-oregon.html" target="_blank">Intel</a>, <a href="https://metroeast.org/" target="_blank">MetroEast Community Media</a>, <a href="https://www.opensignalpdx.org/" target="_blank">Open Signal</a>, The Wiz, <a href="https://www.freegeek.org/" target="_blank">Free Geek</a>, <a href="https://www.pjrc.com/" target="_blank">PJRC</a>, <a href="https://shashijain.co/about/" target="_blank">Shashi Jain</a>, <a href="https://www.torch.app/" target="_blank">Paul Reynolds</a>, and <a href="https://www.pica.org/" target="_blank">PICA</a> and many of the participants and members of the CETI community. 
         </div>
       </section>
       <section id="Participants" class="hackathon__section hackathon__section--participants">
