--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR.">
-  <title>CETI Winter Lights Festival 2020 | Portland, OR</title>
+  <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 8th, 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR.">
+  <title>CETI Winter Light Festival 2020 | Portland, OR</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,|Source+Code+Pro:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
@@ -16,12 +18,12 @@
       <a href="/index.html">
         <h1 id="logo">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 408.265 408.265">
-  <title>CETI Institute</title>
-  <path d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
+        <title>CETI Institute</title>
+        <path d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
+        <path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
+        <path d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
+        <path d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
+        <path d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
       <defs>
             <linearGradient id="skyGradient" x1="100%" y1="100%">
               <stop offset="0%" stop-color="lightblue" stop-opacity=".5">
@@ -48,9 +50,9 @@
         <li class="hackathon__main_nav_item">
           <a href="../index.html" class="hackathon__main_nav_link">Home</a>
         </li>
-        <!-- <li class="hackathon__main_nav_item">
+        <li class="hackathon__main_nav_item">
           <a href="#Projects" class="hackathon__main_nav_link">Projects</a>
-        </li> -->
+        </li>
         <li class="hackathon__main_nav_item">
           <a href="#Participants" class="hackathon__main_nav_link">Participants</a>
         </li>
@@ -99,24 +101,21 @@
             <p><a href="https://www.pdxwlf.com/" target="_blank"><img src="images/PDXWLF-RipplesLogo-2020-Black.png" alt="Portland Winter Light Festival" class="wlflogo"></a></p>
           </div>
           <aside class="hackathon__info_sidebar">
-            <!--<div class="hackathon__info_map_container">
-              <div class="hackathon__info_map">
-                <iframe class="hackathon__map_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJu6-L6pehlVQR9CHtwHlKhbw&key=AIzaSyCz5fYcmFuCORKGXSGu4IwKq3U_HfcdDtA&zoom=14" allowfullscreen></iframe>
-              </div>
-              <div class="hackathon__info_address">
-                <p>
-                  <strong><a href="http://theriveter.co" target="_blank">The Riveter</a> | Revolution Hall</strong><br />
-                  501 SE 14th Ave, Portland, OR 97214<br />
-                  5-9pm Friday<br />
-                  10-7pm Saturday
-                </p>
-              </div>
-            </div>-->
-            <h3 class="hackathon__section_title">Images From 2018 Winter Lights Festival</h3>
+            <h3>Projects</h3>
+            <ul class="carousel">
+              <li><img src="images/project-carousel/CutietimeCatsInSpace-short.png"></li>
+              <li><img src="images/project-carousel/JabberwockyTea.png"></li>
+              <li><img src="images/project-carousel/Light-Reading.jpg"></li>
+              <li><img src="images/project-carousel/MelodicTendrils.png"></li>
+              <li><img src="images/project-carousel/Shapes_In_Space_and_Time_Bernardo_Pantoja.jpg"></li>
+              <li><img src="images/project-carousel/push.jpg"></li>
+              <li><img src="images/project-carousel/Mallory2.jpg"></li>
+            </ul>
+            <!-- <h3 class="hackathon__section_title">Images From 2018 Winter Lights Festival</h3>
             <img src="images/past-projects/Mallory2.jpg" alt="Mallory">
             <img src="images/event-image.jpg" alt="Event Image">
             <img src="images/past-projects/allison_1.jpg" alt="Allison">
-            <img src="images/past-projects/monica_3.jpg" alt="Monica">
+            <img src="images/past-projects/monica_3.jpg" alt="Monica"> -->
             
           </aside>
         </div>
@@ -251,13 +250,17 @@
               <a href="https://docs.google.com/document/d/1JtNCIvxhhIJV5qav-BQsP0WRljAPQRi8vtfIENG9Bm8/" class="hackathon__legal_link" target="_blank">Code of Conduct</a>
             </li>
             <li class="hackathon__legal_item">
-              Copyright 2020 CETI<
+              Copyright 2020 CETI
             </li>
           </ul>
         </div>
       </nav>
     </footer>
   </div>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="js/data.js"></script>
   <script src="js/hackathon.js"></script>
 </body>
