--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -140,6 +140,11 @@
               </a>
             </li>
             <li class="hackathon__partner_item">
+              <a href="https://www.pgefoundation.org/?_ga=2.197938922.492109384.1580789259-772239367.1580789259" class="hackathon__partner_link" target="_blank">
+                <img src="images/partners/pge-wide.jpeg" alt="Portland General Electric" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
               <a href="http://www.hhboiledbagels.com/" class="hackathon__partner_link"  target="_blank">
                 <img src="images/partners/henry-higgins-logo.png" alt="Henry Higgins" class="hackathon__partner_image">
               </a>
