--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -268,6 +268,15 @@
   crossorigin="anonymous"></script>
   <script src="js/data.js"></script>
   <script src="js/hackathon.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CSLJ4LHBM2');
+</script>
 </body>
 
 </html>
