added oregon film and pjrc

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -145,6 +145,16 @@
               </a>
             </li>
             <li class="hackathon__partner_item">
+              <a href="https://oregonfilm.org/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/oregon-film.gif" alt="Oregon Film" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
+              <a href="https://www.pjrc.com/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/pjrc.jpg" alt="PJRC" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
               <a href="http://www.hhboiledbagels.com/" class="hackathon__partner_link"  target="_blank">
                 <img src="images/partners/henry-higgins-logo.png" alt="Henry Higgins" class="hackathon__partner_image">
               </a>
