added links and blurb on nandinis talk

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<h2>Constellations</h2>
 				<h3>Ceti Art+Tech Experiments at the 2020 Portland Winter Light Festival</h3>
 				<a href="wlf2020/index.html"><img src=""></a>
-				<p>Join us on January 17 and 18th group of artists, technologists, and hackers for a weekend of collaborative creative experiments.</p>
+				<p>We are a <a href="https://www.pdxwlf.com/out-and-about" target="_blank">Portland Winter Light Festival Affiliate Site. Join us on February 8th, 5pm - 10pm at The Riveter, KEX Hotel, and 11:11 supply and check our over 20 collaborative projects.</p>
 				<a href="wlf2020/index.html" class="button">Info and Registration</a>
 			</div>
 			<!-- <div class="cta">
@@ -85,11 +85,38 @@
 				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
 			</div> -->
 		</section>
-		<section class="contributors">
-			<p>The design, development, visuals, and branding for CETI were created by the following contributors: Hilary Tsai, Nyssa Oru, Stephen Lee, Mike Heavers, Alanna Risse, Scott Garner.</p>
+		
+		<section class="events">
+		 <!-- Photo by Annie Spratt on Unsplash -->
+		 	<h2>CETI Events</h2>
+
+			<div class="grid">
+				<div class="title">
+					<h2>The Light Fantastic: When Art, Science, and Technology Collide</h2>
+
+					<h3>Speaker: Nandini Ranganathan</h3>
+				</div>
+				<div>
+					<h4>LOCATION</h4>
+					<p>World Trade Center Auditorium</p>
+				</div>
+				<div>
+					<h4>DATE</h4>
+					<p>February 6</p>
+				</div>
+				<div>
+				  <h4>TIME</h4>
+					<p>8:00 pm</p>
+				</div>
+				<div class="title">
+					<p><a href="https://www.pdxwlf.com/the-light-fantastic" target="_blank" class="button">Event Details</a></p>
+				</div>
+			</div>
+		 </section>
+
+			<section class="contributors">
+			<p>The design, development, visuals, and branding for CETI were created by the following contributors: Hilary Tsai, Nyssa Oru, Stephen Lee, Mike Heavers, Alanna Risse, Scott Garner, and Sparkman.</p>
 		</section>
-
-
 		<div id="subscribe-form" class="white-popup-block mfp-hide">
 			<!-- Begin Mailchimp Signup Form -->
 			<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
