--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -73,7 +73,7 @@
               On January 17 and 18th a group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
             </p>
             <p>
-              Join us on the evening of <strong>Feb 8 (5pm - 10pmish)</strong> for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
+              Join us on the evening of <strong>Feb 8 (5pm - 10pmish)</strong> for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the <a href="https://www.pdxwlf.com/" target="_blank">Portland Winter Light festival</a>. Invite family and friends.
             </p>
             <p>
               <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank" class="button">Attend the Show</a>
