added better slideshow still need cleanup

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -102,20 +102,74 @@
           </div>
           <aside class="hackathon__info_sidebar">
             <h3>Projects</h3>
-            <ul class="carousel">
+<!-- NEW SLIDER -->
+            <div class="slider-wrap">
+  <div id="card-slider" class="slider">
+    <div class="slider-item">
+        <div class="animation-card_image">
+            <img src="images/project-carousel/JabberwockyTea.png" alt="">
+        </div>
+        <div class="animation-card_content">
+            <h4 class="animation-card_content_title title-2">Jabberwocky Tea Party</h4>
+            <p class="animation-card_content_description p-2"></p>
+        </div>
+    </div>
+    <div class="slider-item">
+        <div class="animation-card_image">
+            <img src="images/project-carousel/Sophia EmighWaterMother.png" alt="">
+        </div>
+        <div class="animation-card_content">
+            <h4 class="animation-card_content_title title-2">Water Mother</h4>
+            <p class="animation-card_content_description p-2"></p>
+        </div>
+    </div>
+    <div class="slider-item">
+        <div class="animation-card_image">
+            <img src="images/project-carousel/CutietimeCatsInSpace-short.png" alt="">
+        </div>
+        <div class="animation-card_content">
+            <h4 class="animation-card_content_title title-2">Cats in Space</h4>
+            <p class="animation-card_content_description p-2"></p>
+        </div>
+    </div>
+    <div class="slider-item">
+        <div class="animation-card_image">
+            <img src="images/project-carousel/deconstructed-mirror.jpg" alt="">
+        </div>
+        <div class="animation-card_content">
+            <h4 class="animation-card_content_title title-2">Deconstructed Mirror</h4>
+            <!-- <p class="animation-card_content_description p-2"></p>
+            -->
+        </div>
+    </div>
+    <div class="slider-item">
+        <div class="animation-card_image">
+            <img src="images/project-carousel/some_shape_games_shannonOBrien.png" alt="">
+        </div>
+        <div class="animation-card_content">
+            <h4 class="animation-card_content_title title-2">Some Shape Games</h4>
+            <p class="animation-card_content_description p-2"></p>
+        </div>
+    </div>
+</div>
+</div>  
+
+<!-- /NEW SLIDER -->
+
+           <!--  <ul class="carousel">
+              <li><img src="images/project-carousel/deconstructed-mirror.jpg"></li>
+              <li><img src="images/project-carousel/some_shape_games_shannonOBrien.png"></li>
               <li><img src="images/project-carousel/CutietimeCatsInSpace-short.png"></li>
               <li><img src="images/project-carousel/JabberwockyTea.png"></li>
+              <li><img src="images/project-carousel/Sophia EmighWaterMother.png"></li>
+              <li><img src="images/project-carousel/Sophia Loop.png"></li>
               <li><img src="images/project-carousel/Light-Reading.jpg"></li>
               <li><img src="images/project-carousel/MelodicTendrils.png"></li>
               <li><img src="images/project-carousel/Shapes_In_Space_and_Time_Bernardo_Pantoja.jpg"></li>
               <li><img src="images/project-carousel/push.jpg"></li>
               <li><img src="images/project-carousel/Mallory2.jpg"></li>
             </ul>
-            <!-- <h3 class="hackathon__section_title">Images From 2018 Winter Lights Festival</h3>
-            <img src="images/past-projects/Mallory2.jpg" alt="Mallory">
-            <img src="images/event-image.jpg" alt="Event Image">
-            <img src="images/past-projects/allison_1.jpg" alt="Allison">
-            <img src="images/past-projects/monica_3.jpg" alt="Monica"> -->
+ -->
             
           </aside>
         </div>
@@ -276,8 +330,38 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/gsap/1.19.1/TweenMax.min.js"></script>
   <script src="js/data.js"></script>
   <script src="js/hackathon.js"></script>
+  <script>
+    var cards = $('#card-slider .slider-item').toArray();
+
+startAnim(cards);
+
+function startAnim(array){
+    if(array.length >= 4 ) {
+        TweenMax.fromTo(array[0], 0.5, {x:0, y: 0, opacity:0.5}, {x:0, y: -120, opacity:0, zIndex: 0, delay:0.03, ease: Cubic.easeInOut, onComplete: sortArray(array)});
+
+        TweenMax.fromTo(array[1], 0.5, {x:-9, y: 125, opacity:1, zIndex: 1}, {x:0, y: 0, opacity:0.3, zIndex: 0, boxShadow: '-5px 8px 8px 0 rgba(82,89,129,0.05)', ease: Cubic.easeInOut});
+
+        TweenMax.to(array[2], 0.5, {bezier:[{x:0, y:250}, {x:-9, y:200}, {x:-9, y:125}], boxShadow: '-5px 8px 8px 0 rgba(82,89,129,0.05)', zIndex: 1, opacity: 1, ease: Cubic.easeInOut});
+
+        TweenMax.fromTo(array[3], 0.5, {x:0, y:400, opacity: 0, zIndex: 0}, {x:0, y:250, opacity: 0.3, zIndex: 0, ease: Cubic.easeInOut}, );
+    } else {
+        $('#card-slider').append('<p>Sorry, carousel should contain more than 3 slides</p>')
+    }
+}
+
+function sortArray(array) {
+    clearTimeout(delay);
+    var delay = setTimeout(function(){
+        var firstElem = array.shift();
+        array.push(firstElem);
+        return startAnim(array); 
+    },5000)
+}
+
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
 <script>
