--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<h2>Constellations</h2>
 				<h3>Ceti Art+Tech Experiments at the 2020 Portland Winter Light Festival</h3>
 				<a href="wlf2020/index.html"><img src=""></a>
-				<p>We are a <a href="https://www.pdxwlf.com/out-and-about" target="_blank">Portland Winter Light Festival Affiliate Site. Join us on February 8th, 5pm - 10pm at The Riveter, KEX Hotel, and 11:11 supply and check our over 20 collaborative projects.</p>
+				<p>We are a <a href="https://www.pdxwlf.com/out-and-about" target="_blank">Portland Winter Light Festival</a> Affiliate Site. Join us on February 8th, 5pm - 10pm at The Riveter, KEX Hotel, and 11:11 supply and check our over 20 collaborative projects.</p>
 				<a href="wlf2020/index.html" class="button">Info and Registration</a>
 			</div>
 			<!-- <div class="cta">
