--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -174,6 +174,17 @@
           </aside>
         </div>
       </section>
+      <section id="maps" class="hackathon__section hackathon__section--partners">
+        <h3 class="hackathon__section_title">Site Maps</h3>
+        <p>Click the links below to view the installations that will be at each location.</p>
+        <div class="maps__container">
+          <ul class="maps__list">
+            <li target="_blank" class="maps__list_item"><a href="maps/riveter.pdf" class="maps__list_link">Riveter</a></li target="_blank">
+            <li target="_blank" class="maps__list_item"><a href="maps/1111.pdf" class="maps__list_link">11:11</a></li> target="_blank"
+            <li target="_blank" class="maps__list_item"><a href="maps/kex.pdf" class="maps__list_link">Kex</a></li> target="_blank"
+          </ul>
+        </div>
+      </section>
       <section id="Partners" class="hackathon__section hackathon__section--partners">
         <h3 class="hackathon__section_title">Partners and Sponsors</h3>
         <div class="hackathon__partners_container">
