fix broken links

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -179,9 +179,9 @@
         <p>Click the links below to view the installations that will be at each location.</p>
         <div class="maps__container">
           <ul class="maps__list">
-            <li target="_blank" class="maps__list_item"><a href="maps/riveter.pdf" class="maps__list_link">Riveter</a></li target="_blank">
-            <li target="_blank" class="maps__list_item"><a href="maps/1111.pdf" class="maps__list_link">11:11</a></li> target="_blank"
-            <li target="_blank" class="maps__list_item"><a href="maps/kex.pdf" class="maps__list_link">Kex</a></li> target="_blank"
+            <li target="_blank" class="maps__list_item"><a href="maps/riveter.pdf" class="maps__list_link">Riveter</a></li>
+            <li target="_blank" class="maps__list_item"><a href="maps/1111.pdf" class="maps__list_link">11:11</a></li> 
+            <li target="_blank" class="maps__list_item"><a href="maps/kex.pdf" class="maps__list_link">Kex</a></li>
           </ul>
         </div>
       </section>
