--- a/device-sharing/index.html
+++ b/device-sharing/index.html
@@ -67,6 +67,7 @@
 
 		<section class="device-share1">
 			<div>
+				<h1>CETI Device Share</h1>
 				<h2>Goal:  To ensure that every member of our community in the region has the devices needed to access the internet.</h2>
 <p>In the 21st Century, access to the internet and the devices to use it are essential for survival and success.  The recent crisis has highlighted the disproportionate impact of the existing digital inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
 
