add device sharing pages

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="index.html">Home</a>
 <!--             <a href="blog/index.html">Blog</a>
  -->            <a href="wlf2020/index.html">Winter Lights Festival</a>
+ 				<a href="/device-sharing/index.html">Device Sharing</a>
         </div>
     </nav>
     <nav class="desktop">
@@ -29,6 +30,8 @@
             <a href="/index.html">Home</a>
 <!--             <a href="blog/index.html">Blog</a>
  -->            <a href="wlf2020/index.html">Winter Light Festival</a>
+				 <a href="/device-sharing/index.html">Device Sharing</a>
+				 
         </div>
     </nav>
 	<div class="hero">
